# vault

./: Cargo.toml  README.md
crates/vault-app/: Cargo.toml
crates/vault-app/examples/: app_config.rs  load_save.rs
crates/vault-app/src/: app.rs  cli.rs  lib.rs  main.rs  tui.rs
crates/vault-app/src/config/: config_version.rs  db_location.rs  mod.rs
crates/vault-app/src/db/: mod.rs  store.rs
crates/vault-db/: Cargo.toml
crates/vault-db/src/: lib.rs
crates/vault-db/src/entity/: directories.rs  document_relationships.rs  document_tags.rs  documents.rs  mod.rs  tags.rs
crates/vault-migrations/: Cargo.toml
crates/vault-migrations/src/: lib.rs  main.rs
crates/vault-migrations/src/migrations/: m20260609_initialise.rs  mod.rs
